# zil-ledger-nano-s

./: CMakeLists.txt  Makefile  README.md
src/: bech32_addr.c  bech32_addr.h  calcTxnHash.c  derEncoding.c  derEncoding.h  getPublicKey.c  getVersion.c  main.c  pb.h  schnorr.c  schnorr.h  signHash.c  signTxn.c  txn.c  txn.h  txn.pb.c  txn.pb.h  ux.h  zilliqa.c  zilliqa.h
src/protobuf/: gen.sh  txn.proto
src/qatozil/: qatozil.c
test/qatozil/: Makefile  README.md  qatozil.c  test.sh  verifier.py
tools/: getAddress.py  getPublicKey.py  getVersion.py  signHash.py  signTxn.py
